// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog renders with content 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  presentationStyle="overFullScreen"
  statusBarTranslucent={true}
  supportedOrientations={
    Array [
      "portrait",
      "portrait-upside-down",
      "landscape",
      "landscape-left",
      "landscape-right",
    ]
  }
  transparent={true}
  visible={true}
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 1)",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "opacity": 0.3,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flex": 1,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "alignSelf": undefined,
          "bottom": undefined,
          "left": undefined,
          "position": undefined,
          "right": undefined,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 6,
          "top": undefined,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 2,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "backgroundColor": "rgba(255, 251, 254, 1)",
              "borderRadius": 28,
              "justifyContent": "flex-start",
              "maxHeight": 600,
              "maxWidth": 560,
              "minWidth": 280,
              "overflow": "hidden",
              "width": 750,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "marginTop": 24,
                "paddingBottom": 24,
                "paddingHorizontal": 24,
              }
            }
          >
            <Text>
              This is content
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Dialog renders with title, content and 2 action buttons 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  presentationStyle="overFullScreen"
  statusBarTranslucent={true}
  supportedOrientations={
    Array [
      "portrait",
      "portrait-upside-down",
      "landscape",
      "landscape-left",
      "landscape-right",
    ]
  }
  testID="dialogTest"
  transparent={true}
  visible={true}
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 1)",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "opacity": 0.3,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flex": 1,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "alignSelf": undefined,
          "bottom": undefined,
          "left": undefined,
          "position": undefined,
          "right": undefined,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 6,
          "top": undefined,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 2,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "backgroundColor": "rgba(255, 251, 254, 1)",
              "borderRadius": 28,
              "justifyContent": "flex-start",
              "maxHeight": 600,
              "maxWidth": 560,
              "minWidth": 280,
              "overflow": "hidden",
              "width": 750,
            }
          }
        >
          <Text
            accessibilityRole="header"
            style={
              Object {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontSize": 24,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 32,
                "marginHorizontal": 24,
                "marginTop": 24,
                "marginVertical": 12,
              }
            }
          >
            Dialog Title
          </Text>
          <View
            style={
              Object {
                "flex": 1,
                "paddingBottom": 24,
                "paddingHorizontal": 24,
              }
            }
          >
            <Text>
              This is content
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "paddingBottom": 24,
                "paddingHorizontal": 24,
              }
            }
          >
            <View>
              <View
                collapsable={false}
                style={
                  Object {
                    "alignSelf": undefined,
                    "bottom": undefined,
                    "left": undefined,
                    "position": undefined,
                    "right": undefined,
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                    "top": undefined,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    focused={false}
                    pressed={false}
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "borderRadius": 750,
                        "borderStyle": "solid",
                        "flex": 1,
                        "marginLeft": 0,
                        "minWidth": 64,
                      }
                    }
                  >
                    <View
                      accessibilityRole="button"
                      accessibilityState={
                        Object {
                          "disabled": true,
                        }
                      }
                      accessible={true}
                      focusable={false}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Array [
                          Object {
                            "overflow": "hidden",
                          },
                          Object {
                            "borderRadius": 750,
                            "flex": 1,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "flex": 1,
                              "flexDirection": "row",
                              "justifyContent": "center",
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          numberOfLines={1}
                          selectable={false}
                          style={
                            Object {
                              "alignItems": "center",
                              "color": "",
                              "display": "flex",
                              "fontFamily": "System",
                              "fontSize": 16,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                              "marginHorizontal": 12,
                              "marginVertical": 10,
                              "textAlign": "center",
                            }
                          }
                        >
                          Cancel
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View>
              <View
                collapsable={false}
                style={
                  Object {
                    "alignSelf": undefined,
                    "bottom": undefined,
                    "left": undefined,
                    "position": undefined,
                    "right": undefined,
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                    "top": undefined,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    focused={false}
                    pressed={false}
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "borderRadius": 750,
                        "borderStyle": "solid",
                        "flex": 1,
                        "marginLeft": 8,
                        "minWidth": 64,
                      }
                    }
                  >
                    <View
                      accessibilityRole="button"
                      accessibilityState={
                        Object {
                          "disabled": true,
                        }
                      }
                      accessible={true}
                      focusable={false}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Array [
                          Object {
                            "overflow": "hidden",
                          },
                          Object {
                            "borderRadius": 750,
                            "flex": 1,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "flex": 1,
                              "flexDirection": "row",
                              "justifyContent": "center",
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          numberOfLines={1}
                          selectable={false}
                          style={
                            Object {
                              "alignItems": "center",
                              "color": "",
                              "display": "flex",
                              "fontFamily": "System",
                              "fontSize": 16,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                              "marginHorizontal": 12,
                              "marginVertical": 10,
                              "textAlign": "center",
                            }
                          }
                        >
                          Save
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
